more webui progress

--- a/rm_viewer/web/index.html
+++ b/rm_viewer/web/index.html
@@ -9,18 +9,11 @@
 <body>
   <main class="app">
 
-    <div id='folder_grid' class="rm_grid">
-
-    </div>
-
-    <div id='document_grid' class="rm_grid">
-      <div class='document'> RMViewer </div>
-      <div class='document'> Getting started </div>
-      <div class='document'> Quick sheets </div>
-    </div>
-
+    <div id='folder_grid' class="rm_grid"></div>
+    <div id='document_grid' class="rm_grid"></div>
 
   </main>
   <script src="/app.js"></script>
+  <img  
 </body>
 </html>
