--- a/rm_viewer/web/index.html
+++ b/rm_viewer/web/index.html
@@ -20,9 +20,12 @@
       <div id="sort_widget">
         <button id="sort_button">
           <span id="sort_label">Last modified</span>
-          <svg class="sort_chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path d="M7 10l5 5 5-5z"/>
+          <svg class="sort_chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+            <path d="M15.8787 8.99998L18 6.87866L35.1213 24L18 41.1213L15.8787 39L27.6967 27.182C29.4541 25.4246 29.4541 22.5754 27.6967 20.818L15.8787 8.99998Z"></path>
           </svg>
+          <!-- <svg class="sort_chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> -->
+          <!--   <path d="M7 10l5 5 5-5z"/> -->
+          <!-- </svg> -->
         </button>
         
         <div id="sort_dropdown" class="hidden">
@@ -149,30 +152,32 @@
               </button>
               <button class="grid_option" data-grid="small" title="Small grid">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <rect x="3" y="3" width="3.5" height="3.5"/>
-                  <rect x="8" y="3" width="3.5" height="3.5"/>
-                  <rect x="12.5" y="3" width="3.5" height="3.5"/>
-                  <rect x="17.5" y="3" width="3.5" height="3.5"/>
-                  <rect x="3" y="8" width="3.5" height="3.5"/>
-                  <rect x="8" y="8" width="3.5" height="3.5"/>
-                  <rect x="12.5" y="8" width="3.5" height="3.5"/>
-                  <rect x="17.5" y="8" width="3.5" height="3.5"/>
-                  <rect x="3" y="12.5" width="3.5" height="3.5"/>
-                  <rect x="8" y="12.5" width="3.5" height="3.5"/>
-                  <rect x="12.5" y="12.5" width="3.5" height="3.5"/>
-                  <rect x="17.5" y="12.5" width="3.5" height="3.5"/>
-                  <rect x="3" y="17.5" width="3.5" height="3.5"/>
-                  <rect x="8" y="17.5" width="3.5" height="3.5"/>
-                  <rect x="12.5" y="17.5" width="3.5" height="3.5"/>
-                  <rect x="17.5" y="17.5" width="3.5" height="3.5"/>
+                  <rect x="3" y="3" width="3" height="3"/>
+                  <rect x="8" y="3" width="3" height="3"/>
+                  <rect x="13" y="3" width="3" height="3"/>
+                  <rect x="18" y="3" width="3" height="3"/>
+                  <rect x="3" y="8" width="3" height="3"/>
+                  <rect x="8" y="8" width="3" height="3"/>
+                  <rect x="13" y="8" width="3" height="3"/>
+                  <rect x="18" y="8" width="3" height="3"/>
+                  <rect x="3" y="13" width="3" height="3"/>
+                  <rect x="8" y="13" width="3" height="3"/>
+                  <rect x="13" y="13" width="3" height="3"/>
+                  <rect x="18" y="13" width="3" height="3"/>
+                  <rect x="3" y="18" width="3" height="3"/>
+                  <rect x="8" y="18" width="3" height="3"/>
+                  <rect x="13" y="18" width="3" height="3"/>
+                  <rect x="18" y="18" width="3" height="3"/>
                 </svg>
               </button>
               <button class="grid_option" data-grid="list" title="List view">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <rect x="3" y="4" width="18" height="2"/>
-                  <rect x="3" y="9" width="18" height="2"/>
-                  <rect x="3" y="14" width="18" height="2"/>
-                  <rect x="3" y="19" width="18" height="2"/>
+                  <rect x="3" y="5" width="3" height="2"/>
+                  <rect x="8" y="5" width="13" height="2"/>
+                  <rect x="3" y="11" width="3" height="2"/>
+                  <rect x="8" y="11" width="13" height="2"/>
+                  <rect x="3" y="17" width="3" height="2"/>
+                  <rect x="8" y="17" width="13" height="2"/>
                 </svg>
               </button>
             </div>
