--- a/rm_viewer/web/index.html
+++ b/rm_viewer/web/index.html
@@ -186,185 +186,14 @@
       </div>
     </div>
 
-
     <div id='breadcrumbs'></div>
-
 
     <div id='folder_grid' class="rm_grid"></div>
     <div id='document_grid' class="rm_grid"></div>
 
     <div id="pdf-viewer"></div>
-    <script type="module">
-
-import EmbedPDF from 'https://cdn.jsdelivr.net/npm/@embedpdf/snippet@2/dist/embedpdf.js';
-
-const viewer = EmbedPDF.init({
-  type: 'container',
-  target: document.getElementById('pdf-viewer'),
-  src: '/RMViewer.pdf',
-  theme: {
-    preference: 'light',
-    light: {
-      accent: {
-        primary: 'rgb(55, 50, 47)',           // --dark
-        primaryHover: 'rgb(80, 75, 70)',
-        primaryActive: 'rgb(40, 35, 32)',
-        primaryLight: 'rgb(236, 230, 218)',   // --bgDark (subtle selection bg)
-        primaryForeground: 'rgb(249, 246, 241)' // --bgLight (text/icons ON dark buttons)
-      },
-      background: {
-        app: 'rgb(249, 246, 241)',            // --bgLight
-        surface: 'rgb(236, 230, 218)',        // --bgDark
-        surfaceAlt: 'rgb(224, 218, 204)',     // --bgMoreDark
-        elevated: 'rgb(249, 246, 241)',       // --bgLight
-        overlay: 'rgba(55, 50, 47, 0.5)',
-        input: 'rgb(249, 246, 241)'           // --bgLight
-      },
-      foreground: {
-        primary: 'rgb(55, 50, 47)',           // --dark
-        secondary: 'rgba(55, 50, 47, 0.8)',
-        muted: 'rgba(55, 50, 47, 0.5)',
-        disabled: 'rgba(55, 50, 47, 0.3)',
-        onAccent: 'rgb(249, 246, 241)'        // --bgLight (icons ON accent bg)
-      },
-      interactive: {
-        hover: 'rgb(236, 230, 218)',          // --bgDark
-        active: 'rgb(224, 218, 204)',         // --bgMoreDark
-        selected: 'rgb(249, 246, 241)',       // --bgLight
-        focus:  'rgb(55, 50, 47)'             // --dark
-      },
-      border: {
-        default: 'rgb(224, 218, 204)',        // --bgMoreDark
-        subtle: 'rgb(236, 230, 218)',         // --bgDark
-        strong: 'rgb(55, 50, 47)'             // --dark
-      }
-    }
-  },
-  scroll: {
-  },
-  disabledCategories: [
-    'annotation',
-    'redaction',
-    // 'panel-comment',
-    'page-settings',
-    'zoom',
-    'mode',
-    'ui-menu'
-  ]
-});
-
-// Replace document-menu button with a download/export button
-(async () => {
-  const registry = await viewer.registry;
-  const commands = registry.getPlugin('commands').provides();
-  const ui = registry.getPlugin('ui').provides();
-
-  // Register download icon (Tabler download icon)
-  viewer.registerIcon('download', {
-    viewBox: '0 0 24 24',
-    paths: [
-      { d: 'M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2', stroke: 'currentColor', fill: 'none' },
-      { d: 'M7 11l5 5l5 -5', stroke: 'currentColor', fill: 'none' },
-      { d: 'M12 4l0 12', stroke: 'currentColor', fill: 'none' }
-    ]
-  });
-
-  // Register close icon (Tabler X icon)
-  viewer.registerIcon('close-x', {
-    viewBox: '0 0 24 24',
-    paths: [
-      { d: 'M18 6l-12 12', stroke: 'currentColor', fill: 'none' },
-      { d: 'M6 6l12 12', stroke: 'currentColor', fill: 'none' }
-    ]
-  });
-
-  // Register download command - opens PDF in new tab (iOS: use share sheet to save to Files)
-  commands.registerCommand({
-    id: 'custom.download',
-    label: 'Download PDF',
-    icon: 'download',
-    action: () => {
-      const url = viewer.config?.src || '/RMViewer.pdf';
-      window.open(url, '_blank');
-    }
-  });
-
-  // Register close command - hides the PDF viewer
-  commands.registerCommand({
-    id: 'custom.close',
-    label: 'Close',
-    icon: 'close-x',
-    action: () => {
-      const el = document.getElementById('pdf-viewer');
-      el.classList.add('closing');
-      el.addEventListener('transitionend', () => {
-        el.style.display = 'none';
-        el.classList.remove('closing');
-      }, { once: true });
-    }
-  });
-
-  // Replace toolbar buttons
-  const schema = ui.getSchema();
-  const toolbar = schema.toolbars['main-toolbar'];
-  const items = JSON.parse(JSON.stringify(toolbar.items));
-
-  // Replace document-menu-button with download button
-  const leftGroup = items.find(item => item.id === 'left-group');
-  if (leftGroup) {
-    const idx = leftGroup.items.findIndex(item => item.id === 'document-menu-button');
-    if (idx !== -1) {
-      leftGroup.items[idx] = {
-        type: 'command-button',
-        id: 'download-button',
-        commandId: 'custom.download',
-        variant: 'icon'
-      };
-    }
-  }
-
-  // Replace comment-button with close button
-  const rightGroup = items.find(item => item.id === 'right-group');
-  if (rightGroup) {
-    const idx = rightGroup.items.findIndex(item => item.id === 'comment-button');
-    if (idx !== -1) {
-      rightGroup.items[idx] = {
-        type: 'command-button',
-        id: 'close-button',
-        commandId: 'custom.close',
-        variant: 'icon'
-      };
-    }
-  }
-
-  ui.mergeSchema({
-    toolbars: { 'main-toolbar': { ...toolbar, items } }
-  });
-})();
-
-// Fix: EmbedPDF hides pan/pointer buttons at certain widths - always show them
-function fixEmbedPDFToolbar() {
-  const container = document.querySelector('embedpdf-container');
-  if (!container?.shadowRoot?.querySelector('[data-epdf-i="pan-button"]')) return false;
-  if (container.shadowRoot.querySelector('#epdf-toolbar-fix')) return true;
-
-  const style = document.createElement('style');
-  style.id = 'epdf-toolbar-fix';
-  style.textContent = `
-    [data-epdf-i="pan-button"],
-    [data-epdf-i="pointer-button"] {
-      display: flex !important;
-    }
-  `;
-  container.shadowRoot.appendChild(style);
-  return true;
-}
-const fixInterval = setInterval(() => { if (fixEmbedPDFToolbar()) clearInterval(fixInterval); }, 100);
-setTimeout(() => clearInterval(fixInterval), 10000);
-
-    </script>
   </main>
-  <script src="/app.js"></script>
+  <script type="module" src="/app.js"></script>
   <img  
 </body>
 </html>
