--- a/rm_viewer/web/index.html
+++ b/rm_viewer/web/index.html
@@ -190,7 +190,16 @@
       </div>
     </div>
 
-    <div id='breadcrumbs'></div>
+    <div id="breadcrumb_bar">
+      <div id='breadcrumbs'></div>
+      <button id="download_zip" title="Download all as ZIP">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="currentColor">
+          <path d="M4 6H44V16H41V24H38V16H20.5C14.701 16 10 20.701 10 26.5V39H24V42H7V16H4V6ZM7 13H41V9H7V13Z"/>
+          <path d="M30 21H18V24H30V21Z"/>
+          <path d="M42 34.3787L44.1213 36.5L36 44.6213L27.8787 36.5L30 34.3787L31.9395 36.318C32.8788 37.2573 34.4809 36.6016 34.4999 35.2812L34.4999 35.2574L34.5 26.5H37.5L37.5001 35.2574L37.5001 35.2812C37.5191 36.6016 39.1212 37.2573 40.0605 36.318L42 34.3787Z"/>
+        </svg>
+      </button>
+    </div>
 
     <div id='folder_grid' class="rm_grid"></div>
     <div id='document_grid' class="rm_grid"></div>
